--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="stylesheet" href="index.css">
 </head>
 
@@ -15,8 +16,8 @@
             <nav>
                 <ul>
                     <li><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Services</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#services">Services</a></li>
                     <li><a href="#">Portfolio</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
@@ -37,8 +38,7 @@
                 </div>
                 <div class="about-col2">
                     <h1>About Me</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et vero omnis similique obcaecati at
-                        aperiam. Expedita, soluta. Ex, ipsam molestias.</p>
+                    <!-- <p>Like to code in python. Want to become a Full-Stack Developer. Hobbies are Chess as an indoor games and badminton as an outdoor games.</p> -->
                     <div class="tab-titles">
                         <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
                         <p class="tab-links" onclick="opentab('experience')">Experience</p>
@@ -80,34 +80,36 @@
 
     </div>
 
+   
     <!--Services-->
     <div id="services">
         <div class="container">
-            <h1 class="subtitle">Experience In</h1>
+            <h1 class="heading">Experience In</h1>
             <div class="services-list">
-                <div>
+                <div class="services">
                     <img src="images/HTML.jpeg" alt="">
                     <h2>HTML 5</h2>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste temporibus reprehenderit impedit
                         veritatis consectetur ea dolor unde odio sint illum. Odit provident labore non voluptatum maxime
-                        consectetur. Molestiae, enim commodi!</p> 
-                        <a href="https://www.w3schools.com/html/default.asp" target="blank">Learn More</a>
+                        consectetur. Molestiae, enim commodi!</p>
+                    <a href="https://www.w3schools.com/html/default.asp" target="blank">Learn More</a>
                 </div>
                 <div>
                     <img src="images/CSS.jpeg" alt="">
                     <h2>CSS</h2>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste temporibus reprehenderit impedit
                         veritatis consectetur ea dolor unde odio sint illum. Odit provident labore non voluptatum maxime
-                        consectetur. Molestiae, enim commodi!</p> 
-                        <a href="https://www.w3schools.com/css/default.asp" target="blank">Learn More</a>
+                        consectetur. Molestiae, enim commodi!</p>
+                    <a href="https://www.w3schools.com/css/default.asp" target="blank">Learn More</a>
                 </div>
                 <div>
                     <img src="images/js.jpeg" alt="">
-                    <h2>Java Script</Script></h2>
+                    <h2>Java Script</Script>
+                    </h2>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste temporibus reprehenderit impedit
                         veritatis consectetur ea dolor unde odio sint illum. Odit provident labore non voluptatum maxime
-                        consectetur. Molestiae, enim commodi!</p> 
-                        <a href="https://www.w3schools.com/js/default.asp" target="blank">Learn More</a>
+                        consectetur. Molestiae, enim commodi!</p>
+                    <a href="https://www.w3schools.com/js/default.asp" target="blank">Learn More</a>
                 </div>
 
 
@@ -116,40 +118,40 @@
                     <h2>C Programming</h2>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste temporibus reprehenderit impedit
                         veritatis consectetur ea dolor unde odio sint illum. Odit provident labore non voluptatum maxime
-                        consectetur. Molestiae, enim commodi!</p> 
-                        <a href="https://www.w3schools.com/c/" target="blank">Learn More</a>
+                        consectetur. Molestiae, enim commodi!</p>
+                    <a href="https://www.w3schools.com/c/" target="blank">Learn More</a>
                 </div>
                 <div>
                     <img src="images/python.jpeg" alt="">
                     <h2>Python</h2>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste temporibus reprehenderit impedit
                         veritatis consectetur ea dolor unde odio sint illum. Odit provident labore non voluptatum maxime
-                        consectetur. Molestiae, enim commodi!</p> 
-                        <a href="https://www.w3schools.com/python/default.asp" target="blank" >Learn More</a>
+                        consectetur. Molestiae, enim commodi!</p>
+                    <a href="https://www.w3schools.com/python/default.asp" target="blank">Learn More</a>
                 </div>
                 <div>
                     <img src="images/java.jpeg" alt="">
                     <h2>Java</h2>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste temporibus reprehenderit impedit
                         veritatis consectetur ea dolor unde odio sint illum. Odit provident labore non voluptatum maxime
-                        consectetur. Molestiae, enim commodi!</p> 
-                        <a href="https://www.w3schools.com/java/" target="blank">Learn More</a>
+                        consectetur. Molestiae, enim commodi!</p>
+                    <a href="https://www.w3schools.com/java/" target="blank">Learn More</a>
                 </div>
                 <div>
                     <img src="images/php.png" alt="">
                     <h2>PHP</h2>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste temporibus reprehenderit impedit
                         veritatis consectetur ea dolor unde odio sint illum. Odit provident labore non voluptatum maxime
-                        consectetur. Molestiae, enim commodi!</p> 
-                        <a href="https://www.w3schools.com/php/" target="blank">Learn More</a>
+                        consectetur. Molestiae, enim commodi!</p>
+                    <a href="https://www.w3schools.com/php/" target="blank">Learn More</a>
                 </div>
                 <div>
                     <img src="images/MySQL.png" alt="">
                     <h2>MY SQL</h2>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste temporibus reprehenderit impedit
                         veritatis consectetur ea dolor unde odio sint illum. Odit provident labore non voluptatum maxime
-                        consectetur. Molestiae, enim commodi!</p> 
-                        <a href="https://www.w3schools.com/MySQL/default.asp" target="blank">Learn More</a>
+                        consectetur. Molestiae, enim commodi!</p>
+                    <a href="https://www.w3schools.com/MySQL/default.asp" target="blank">Learn More</a>
                 </div>
                 <!-- <div>
                     <img src="images/postgres.jpeg" alt="">
@@ -167,7 +169,7 @@
                         consectetur. Molestiae, enim commodi!</p> 
                         <a href="https://www.tutorialspoint.com/mongodb/index.htm" target="blank">Learn More</a>
                 </div> -->
-                
+
                 <!-- <div>
                     <img src="images/ReactJS.jpg" alt="">
                     <h2>React JS</h2>
@@ -185,11 +187,73 @@
                         <a href="https://www.tutorialspoint.com/nodejs/" target="blank">Learn More</a>
                 </div> -->
             </div>
-<a href="#" class="btn">See More</a>
+            <a href="#" class="btn">See More</a>
         </div>
-        
+
     </div>
-   
+
+    <!-- footer -->
+    <div class="footer">
+        <div class="container">
+            <div class="row">
+                <div class="footer-col">
+                    <h4>About</h4>
+                    <ul>
+                        <li><a href="#">Projects</a></li>
+                        <li><a href="#">Contact</a></li>
+                        <li><a href="#">Work With Us</a></li>
+                        <li><a href="#">Terms of Use</a></li>
+                        <li><a href="#">Privacy Policy</a></li>
+                    </ul>
+
+                    <!-- Bhaskar Singh Bhakuni<br>
+                    Web Developer<br>
+                    bhaskarsinghbhakuni1273@gmail.com
+                    <a href="#"><i class="fab fa-phone">                    +91 8356013824
+                    </i></a> -->
+                </div>
+                <div class="footer-col">
+                    <h4>Travel Tips</h4>
+                    <ul>
+                        <li><a href="#">Start Here</a></li>
+                        <li><a href="#">Blog</a></li>
+                        <li><a href="#">Destinations</a></li>
+                        <li><a href="#">India Travel</a></li>
+                        <li><a href="#">Travel Insurance</a></li>
+
+                    </ul>
+                </div>
+                <div class="footer-col">
+                    <h4>Resources</h4>
+                    <ul>
+                        <li><a href="#">Categories</a></li>
+                        <li><a href="#">Search Rides</a></li>
+                        <li><a href="#">City Guides</a></li>
+                        <li><a href="#">Travel Resources</a></li>
+
+                    </ul>
+                </div>
+                <div class="footer-col">
+                    <h4>Follow Us</h4>
+                    <div class="social-links">
+                        <a href="https://www.linkedin.com/in/bhaskar-singh-bhakuni-b90534246/"><i class="fab fa-linkedin-in"></i></a>
+                        <a href="https://github.com/Bunnyy0905"><i class="fab fa-github"></i></a>
+                        <a href="https://www.facebook.com/bhaskarsingh.bhakuni.79/"><i class="fab fa-facebook-f"></i></a>
+                        <!-- <a href="#"><i class="fab fa-twitter"></i></a> -->
+                        <a href="https://www.instagram.com/geothunder_1273/"><i class="fab fa-instagram"></i></a>
+
+                    </div>
+                </div>
+
+            </div>
+        </div>
+        <div class="footer-Bottom">
+            <p>Copyright &copy; 2023; Designed by <span class="designer">Bhaskar Singh</span></p>
+
+
+        </div>
+    </div>
+
     <script>
         var tablinks = document.getElementsByClassName("tab-links");
         var tabcontents = document.getElementsByClassName("tab-contents");
@@ -208,13 +272,13 @@
 
         }
 
-// Show More
-const showmore = document.querySelector('.select-more');
-let currentItems=3;
-showmore.addEventListener('click', (e)=> {
-    const elementList=[...document.querySelectorAll('.services-list')];
+        // Show More
+        const showmore = document.querySelector('.select-more');
+        let currentItems = 3;
+        showmore.addEventListener('click', (e) => {
+            const elementList = [...document.querySelectorAll('.services-list')];
 
-})
+        })
 
     </script>
 </body>
